<resources>
    <string name="app_name">kuelye-E</string>
    <string name="share_photo_title">Делитесь фотографиями</string>
    <string name="share_photo_subtitle">Поделитесь фотографией на стене, и добавьте к ней описание.</string>
    <string name="share_photo_choose_photo">Выбрать фото</string>
    <string name="share_sheet_title">Поделиться на стене</string>
    <string name="share_sheet_add_comment">Добавить комментарий</string>
    <string name="a_send">Отправить</string>
</resources>
